# forge-kit

./: .gitignore  .markdownlint.json  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  forge-driven.md  forge-methodology.md  pyproject.toml
.codebuff/rules/: forge-rules.md
.devcontainer/: devcontainer.json
.forge/: copilot.manifest.json  edges.json  forge.config.yaml  health-report-2026-05-19.md
.forge/decisions/: dec-4b7d91e3-checklist.md  dec-4b7d91e3.yaml
.forge/experiments/: exp-c3b7a91d-checklist.md  exp-c3b7a91d.yaml
.forge/features/: fea-d5e1f8a2-checklist.md  fea-d5e1f8a2.yaml
.forge/hypotheses/: hyp-8a3f2c1e-checklist.md  hyp-8a3f2c1e.yaml
.forge/memory/: constitution-check.md  constitution.md
.forge/releases/: rel-6f4d2a9e-checklist.md  rel-6f4d2a9e.yaml
.forge/retrospectives/: rsp-5800e091-checklist.md  rsp-5800e091.yaml
.forge/scripts/bash/: check-prerequisites.sh
.forge/signals/: sig-47d0df57.yaml  sig-5857a02e.yaml  sig-7622aaae-checklist.md  sig-7622aaae.yaml  sig-f92c9584.yaml
.forge/templates/: checklist-template.md  experiment-template.md  hypothesis-template.md  release-manifest-template.md  signal-template.md  tasks-template.md  vscode-settings.json
.forge/templates/commands/: ai-critique.md  analyze.md  checklist.md  experiment.md  retrospect.md
.forge/templates/presets/signal-first/commands/: forge.hypothesize.md
.forge/templates/presets/signal-first/templates/: signal-template.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: agent_request.yml  bug_report.yml  config.yml  extension_submission.yml  feature_request.yml  preset_submission.yml
.github/workflows/: ci.yml  codeql.yml  lint.yml  release-trigger.yml  release.yml  stale.yml  test.yml
docs/: index.md  installation.md  quickstart.md
docs/concepts/: fdd.md
docs/reference/: commands.md  overview.md
extensions/: EXTENSION-PUBLISHING-GUIDE.md  README.md
extensions/git/: README.md  extension.yml  git-config.yml
extensions/git/commands/: forge.git.branch.md  forge.git.commit.md  forge.git.initialize.md  forge.git.remote.md  forge.git.validate.md
extensions/git/scripts/bash/: auto-commit.sh  create-signal-branch.sh  initialize-repo.sh
extensions/git/scripts/powershell/: auto-commit.ps1  create-signal-branch.ps1  initialize-repo.ps1
presets/: PUBLISHING.md  README.md  catalog.community.json  catalog.json
presets/signal-first/: README.md  preset.yml
presets/signal-first/commands/: forge.decide.md
scripts/bash/: create-new-feature.sh
scripts/powershell/: setup-feature.ps1  signal-capture.ps1
specs/d5e1f8a2-interactive-forge-init/: spec.md
src/forge_cli/: __init__.py  cli.py  prompts.py
src/forge_cli/commands/: __init__.py  init.py
src/forge_cli/core_pack/commands/: ai-analyze.md  check.md  feature.md  graph.md  hypothesize.md  signal.md
src/forge_cli/core_pack/presets/signal-first/commands/: forge.signal.md
src/forge_cli/core_pack/presets/signal-first/templates/: hypothesis-template.md
src/forge_cli/core_pack/scripts/bash/: graph-update.sh  signal-capture.sh
src/forge_cli/core_pack/templates/: cognitive-contract-template.md  experiment-template.md  feature-template.md  release-manifest-template.md  signal-template.md
src/forge_cli/integrations/: __init__.py  anthropic.py  aws_bedrock.py  azure_openai.py  base.py  claude.py  cline.py  codeium.py  continue_.py  copilot.py  cursor.py  gemini.py  manifest.py  openai.py  tabnine.py  windsurf.py
src/forge_cli/utils/: __init__.py  config.py  helpers.py
templates/: constitution-template.md  decision-template.md
templates/commands/: ai-blind-spots.md  clarify.md  constitution.md  decide.md  release.md
tests/: __init__.py  test_init.py
workflows/forge/: ARCHITECTURE.md  README.md
