[project]
name = "forge-cli"
version = "0.1.0.dev0"
description = "Forge CLI, part of Forge Kit. A toolkit to bootstrap your projects for Feature-Oriented Requirements & Governance Engine (FORGE)."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.0",
    "click>=8.2.1",
    "rich",
    "platformdirs",
    "readchar",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "pathspec>=0.12.0",
    "json5>=0.13.0",
]

[project.scripts]
forge = "forge_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_cli"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle core assets so `forge init` works without network access (air-gapped / enterprise)
"templates/signal-template.md" = "forge_cli/core_pack/templates/signal-template.md"
"templates/hypothesis-template.md" = "forge_cli/core_pack/templates/hypothesis-template.md"
"templates/decision-template.md" = "forge_cli/core_pack/templates/decision-template.md"
"templates/feature-template.md" = "forge_cli/core_pack/templates/feature-template.md"
"templates/experiment-template.md" = "forge_cli/core_pack/templates/experiment-template.md"
"templates/release-manifest-template.md" = "forge_cli/core_pack/templates/release-manifest-template.md"
"templates/cognitive-contract-template.md" = "forge_cli/core_pack/templates/cognitive-contract-template.md"
"templates/constitution-template.md" = "forge_cli/core_pack/templates/constitution-template.md"
"templates/tasks-template.md" = "forge_cli/core_pack/templates/tasks-template.md"
"templates/checklist-template.md" = "forge_cli/core_pack/templates/checklist-template.md"
"templates/vscode-settings.json" = "forge_cli/core_pack/templates/vscode-settings.json"
# Command templates
"templates/commands" = "forge_cli/core_pack/commands"
"scripts/bash" = "forge_cli/core_pack/scripts/bash"
"scripts/powershell" = "forge_cli/core_pack/scripts/powershell"
# Bundled presets
"presets/signal-first" = "forge_cli/core_pack/presets/signal-first"

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
lint = [
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501", # line length (handled by ruff formatter)
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
