[project]
name = "forge-cli"
version = "0.2.0"
description = "Forge CLI, part of Forge Kit. A toolkit to bootstrap your projects for Feature-Oriented Requirements & Governance Engine (FORGE)."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.0",
    "click>=8.2.1",
    "rich",
    "platformdirs",
    "readchar",
    "questionary>=2.1.0",
    "pyyaml>=6.0.3",
    "packaging>=26.2",
    "pathspec>=1.1.1",
    "json5>=0.14.0",
]

[project.scripts]
forge = "forge_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_cli"]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
lint = [
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501", # line length (handled by ruff formatter)
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
